@@ -4,6 +4,7 @@ v0.1.8
       documentation has been published.
   New features
     * Amending attributes with a collector.
+    * Stdlib functions : chomp
 
 v0.1.7 (2012/08/24)
   Bugs fixed
